--- a/clase02/clase02-01.html
+++ b/clase02/clase02-01.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Clase 2 - Ejemplo 1</title>
 </head>
 <body>
-    <h1>Soy el titulo</h1>
-    <h2>Soy el Sub titulo</h2>
+    <!-- 
+        Soy un comentario de HTML
+     -->
+    <h1>Soy el título del Mundo</h1>
+    <h2>Soy el subtítulo del Mundo</h2>
+    <p>Soy el párrafo del mundo.</p>
+    <p>Lorem ipsum felicidad sit amet consectetur adipisicing elit. Eum, quidem esse!</p>
 </body>
 </html>
