feat: ejercicios 7 terminado

--- a/Ejercicios/ejercicio06/html-semantico.html
+++ b/Ejercicios/ejercicio06/html-semantico.html
@@ -12,85 +12,75 @@
         <h1>Cabecera</h1>
       </header>
       <main>
-        <h2><b>Bloque principal</b></h2>
-        <section>
-          <h3>Titulo de la seccion</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-        </section>
-        <section>
-          <h3>Titulo de otra seccion</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-        </section>
-        <section>
-          <h3>Titulo de otra seccion</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-        </section>
-        <section>
-          <h3>Titulo de otra seccion</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-        </section>
-        <section>
-          <h3>Titulo de otra seccion</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Accusantium possimus eos, aliquam eligendi dolor distinctio
-            perferendis recusandae debitis vel, nemo ipsa optio quo accusamus
-            assumenda praesentium hic quis blanditiis tempora?
-          </p>
-        </section>
+        <h2>Bloque principal</h2>
+        <h3>Título de una sección</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <h3>Título de otra sección</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <h3>Título de otra sección</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <h3>Título de otra sección</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <h3>Título de otra sección</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nam
+          autem, cum aperiam sapiente consequuntur culpa dolorem unde tenetur
+          exercitationem, amet eveniet maxime soluta blanditiis sit dolorum.
+          Magnam, tenetur deserunt.
+        </p>
       </main>
       <footer>
-        <p>Pie de pagina</p>
+        <small>Pie de pagina</small>
       </footer>
     </div>
   </body>
